# Backend

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
.pet/: pyvenv.cfg
alembic/: env.py
alembic/versions/: 40a8e5458bc8_fix_add_healthstatus_enum.py  485d594c147e_fix_remove_date_to_timemixxin.py  5069f9e43283_add_vaccine_tables_and_insert_initial_.py  737820792483_initial_migration.py
api/: main.py
api/core/: base.py  config.py  security.py  token_manager.py
api/db/: enums.py  models.py  session.py
api/routers/: dog.py  health.py  mbti.py  medic.py  option.py  user.py  vaccine.py
api/schemas/: dog.py  health.py  medic.py  user.py  vaccine.py
api/scripts/: seed_data.py
api/services/: auth_service.py  dog_service.py  health_service.py  mbti_service.py  medic_service.py  option_service.py  vaccine_service.py
