[tool.poetry]
name = "bethepet"
version = "0.1.0"
description = "A FastAPI service for pet health management"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
python-jose = "^3.3.0" 
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
pydantic = {extras = ["email"], version = "^2.11.4"}
alembic = "^1.15.2"

